[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/puzzle/customer-view-outline.png" type="Texture" id=1]
[ext_resource path="res://assets/puzzle/customer-view-mask.png" type="Texture" id=2]
[ext_resource path="res://src/main/world/restaurant/RestaurantScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/world/restaurant/customer-view.gd" type="Script" id=4]
[ext_resource path="res://src/main/world/restaurant/fat-player.gd" type="Script" id=5]
[ext_resource path="res://src/main/world/restaurant/customer-switcher.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]

[sub_resource type="Environment" id=2]

[sub_resource type="World" id=3]
environment = SubResource( 1 )
fallback_environment = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 280, 280 ), Vector2( 280, 280 ), Vector2( 300, 215 ), Vector2( 339, -136 ) ]
}

[node name="CustomerView" type="Node2D"]
script = ExtResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 580.0
margin_bottom = 540.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 580, 540 )
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
offset = Vector2( 280, 280 )
current = true

[node name="CustomerSwitcher" type="Node2D" parent="ViewportContainer/Viewport"]
script = ExtResource( 6 )

[node name="Scene" parent="ViewportContainer/Viewport/CustomerSwitcher" instance=ExtResource( 3 )]
position = Vector2( -89.8812, -104.904 )

[node name="CustomerSwitchTween" type="Tween" parent="ViewportContainer/Viewport/CustomerSwitcher"]

[node name="FatPlayer" type="AnimationPlayer" parent="ViewportContainer/Viewport/CustomerSwitcher"]
anims/Fat = SubResource( 4 )
script = ExtResource( 5 )

[node name="OvalMask" type="Light2D" parent="."]
visible = false
texture = ExtResource( 2 )
offset = Vector2( 290, 270 )
mode = 3
range_item_cull_mask = 2

[node name="SceneClip" type="Control" parent="."]
visible = false
margin_right = 562.0
margin_bottom = 526.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OvalOutline" type="Sprite" parent="."]
self_modulate = Color( 0.360784, 0.192157, 0.12549, 1 )
z_index = 25
texture = ExtResource( 1 )
centered = false
